src/main/gen/com/boolerules/prl/plugin/parser/PrlParser.java
// This is a generated file. Not intended for manual editing.
package com.boolerules.prl.plugin.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.boolerules.prl.plugin.psi.PrlTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class PrlParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return root(b, l + 1);
  }

  /* ********************************************************** */
  // versionPredicate | featureRef | comparisonPredicate | inEnumPredicate | inIntPredicate
  public static boolean atomicConstraint(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomicConstraint")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATOMIC_CONSTRAINT, "<atomic constraint>");
    r = versionPredicate(b, l + 1);
    if (!r) r = featureRef(b, l + 1);
    if (!r) r = comparisonPredicate(b, l + 1);
    if (!r) r = inEnumPredicate(b, l + 1);
    if (!r) r = inIntPredicate(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // BOOL? FEAT featureDef
  public static boolean boolFeatureRange(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolFeatureRange")) return false;
    if (!nextTokenIs(b, "<bool feature range>", BOOL, FEAT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BOOL_FEATURE_RANGE, "<bool feature range>");
    r = boolFeatureRange_0(b, l + 1);
    r = r && consumeToken(b, FEAT);
    p = r; // pin = 2
    r = r && featureDef(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // BOOL?
  private static boolean boolFeatureRange_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolFeatureRange_0")) return false;
    consumeToken(b, BOOL);
    return true;
  }

  /* ********************************************************** */
  // AMO featureList | EXO featureList
  public static boolean cc(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cc")) return false;
    if (!nextTokenIs(b, "<cc>", AMO, EXO)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CC, "<cc>");
    r = cc_0(b, l + 1);
    if (!r) r = cc_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // AMO featureList
  private static boolean cc_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cc_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AMO);
    r = r && featureList(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // EXO featureList
  private static boolean cc_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cc_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EXO);
    r = r && featureList(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // COMMENT
  static boolean comment_(PsiBuilder b, int l) {
    return consumeToken(b, COMMENT);
  }

  /* ********************************************************** */
  // EQ | NE | LT | LE | GT | GE
  public static boolean comparator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPARATOR, "<comparator>");
    r = consumeToken(b, EQ);
    if (!r) r = consumeToken(b, NE);
    if (!r) r = consumeToken(b, LT);
    if (!r) r = consumeToken(b, LE);
    if (!r) r = consumeToken(b, GT);
    if (!r) r = consumeToken(b, GE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LSQB term comparator term RSQB
  public static boolean comparisonPredicate(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparisonPredicate")) return false;
    if (!nextTokenIs(b, LSQB)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LSQB);
    r = r && term(b, l + 1);
    r = r && comparator(b, l + 1);
    r = r && term(b, l + 1);
    r = r && consumeToken(b, RSQB);
    exit_section_(b, m, COMPARISON_PREDICATE, r);
    return r;
  }

  /* ********************************************************** */
  // lit (AND lit)*
  public static boolean conj(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conj")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONJ, "<conj>");
    r = lit(b, l + 1);
    r = r && conj_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (AND lit)*
  private static boolean conj_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conj_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!conj_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "conj_1", c)) break;
    }
    return true;
  }

  // AND lit
  private static boolean conj_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conj_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AND);
    r = r && lit(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // TRUE | FALSE
  public static boolean constant(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constant")) return false;
    if (!nextTokenIs(b, "<constant>", FALSE, TRUE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTANT, "<constant>");
    r = consumeToken(b, TRUE);
    if (!r) r = consumeToken(b, FALSE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // equivalence {
  // //  recoverWhile = recoverConstraint
  // }
  public static boolean constraint(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constraint")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTRAINT, "<constraint>");
    r = equivalence(b, l + 1);
    r = r && constraint_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // {
  // //  recoverWhile = recoverConstraint
  // }
  private static boolean constraint_1(PsiBuilder b, int l) {
    return true;
  }

  /* ********************************************************** */
  // constraint
  static boolean constraintRule(PsiBuilder b, int l) {
    return constraint(b, l + 1);
  }

  /* ********************************************************** */
  // LSQB DATE_VAL (COMMA DATE_VAL)* RSQB
  public static boolean dateList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dateList")) return false;
    if (!nextTokenIs(b, LSQB)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, LSQB, DATE_VAL);
    r = r && dateList_2(b, l + 1);
    r = r && consumeToken(b, RSQB);
    exit_section_(b, m, DATE_LIST, r);
    return r;
  }

  // (COMMA DATE_VAL)*
  private static boolean dateList_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dateList_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!dateList_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "dateList_2", c)) break;
    }
    return true;
  }

  // COMMA DATE_VAL
  private static boolean dateList_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dateList_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, COMMA, DATE_VAL);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // dateList | LSQB DATE_VAL NOT_MINUS DATE_VAL RSQB
  public static boolean dateRange(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dateRange")) return false;
    if (!nextTokenIs(b, LSQB)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = dateList(b, l + 1);
    if (!r) r = parseTokens(b, 0, LSQB, DATE_VAL, NOT_MINUS, DATE_VAL, RSQB);
    exit_section_(b, m, DATE_RANGE, r);
    return r;
  }

  /* ********************************************************** */
  // conj (OR conj)*
  public static boolean disj(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "disj")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DISJ, "<disj>");
    r = conj(b, l + 1);
    r = r && disj_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (OR conj)*
  private static boolean disj_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "disj_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!disj_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "disj_1", c)) break;
    }
    return true;
  }

  // OR conj
  private static boolean disj_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "disj_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OR);
    r = r && conj(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // quotedString
  public static boolean elementDescription(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elementDescription")) return false;
    if (!nextTokenIs(b, QUOTED)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = quotedString(b, l + 1);
    exit_section_(b, m, ELEMENT_DESCRIPTION, r);
    return r;
  }

  /* ********************************************************** */
  // ENUM FEAT featureDef stringList
  public static boolean enumFeatureRange(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enumFeatureRange")) return false;
    if (!nextTokenIs(b, ENUM)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ENUM_FEATURE_RANGE, null);
    r = consumeTokens(b, 1, ENUM, FEAT);
    p = r; // pin = 1
    r = r && report_error_(b, featureDef(b, l + 1));
    r = p && stringList(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // stringList
  public static boolean enumRange(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enumRange")) return false;
    if (!nextTokenIs(b, LSQB)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = stringList(b, l + 1);
    exit_section_(b, m, ENUM_RANGE, r);
    return r;
  }

  /* ********************************************************** */
  // implication (EQUIV equivalence)?
  public static boolean equivalence(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "equivalence")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EQUIVALENCE, "<equivalence>");
    r = implication(b, l + 1);
    r = r && equivalence_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (EQUIV equivalence)?
  private static boolean equivalence_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "equivalence_1")) return false;
    equivalence_1_0(b, l + 1);
    return true;
  }

  // EQUIV equivalence
  private static boolean equivalence_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "equivalence_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQUIV);
    r = r && equivalence(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // featureBodyContent*
  public static boolean featureBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "featureBody")) return false;
    Marker m = enter_section_(b, l, _NONE_, FEATURE_BODY, "<feature body>");
    while (true) {
      int c = current_position_(b);
      if (!featureBodyContent(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "featureBody", c)) break;
    }
    exit_section_(b, l, m, true, false, PrlParser::recoverFeatureBody);
    return true;
  }

  /* ********************************************************** */
  // DESCRIPTION elementDescription | property
  public static boolean featureBodyContent(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "featureBodyContent")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FEATURE_BODY_CONTENT, "<feature body content>");
    r = featureBodyContent_0(b, l + 1);
    if (!r) r = property(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // DESCRIPTION elementDescription
  private static boolean featureBodyContent_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "featureBodyContent_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, DESCRIPTION);
    p = r; // pin = 1
    r = r && elementDescription(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // identifier
  public static boolean featureDef(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "featureDef")) return false;
    if (!nextTokenIs(b, "<feature def>", BTCK_IDENTIFIER, IDENT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FEATURE_DEF, "<feature def>");
    r = identifier(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // vis? (versionedBoolFeatureRange | boolFeatureRange | enumFeatureRange | intFeatureRange) (LBRA featureBody RBRA)?
  public static boolean featureDefinition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "featureDefinition")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FEATURE_DEFINITION, "<feature definition>");
    r = featureDefinition_0(b, l + 1);
    r = r && featureDefinition_1(b, l + 1);
    r = r && featureDefinition_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // vis?
  private static boolean featureDefinition_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "featureDefinition_0")) return false;
    vis(b, l + 1);
    return true;
  }

  // versionedBoolFeatureRange | boolFeatureRange | enumFeatureRange | intFeatureRange
  private static boolean featureDefinition_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "featureDefinition_1")) return false;
    boolean r;
    r = versionedBoolFeatureRange(b, l + 1);
    if (!r) r = boolFeatureRange(b, l + 1);
    if (!r) r = enumFeatureRange(b, l + 1);
    if (!r) r = intFeatureRange(b, l + 1);
    return r;
  }

  // (LBRA featureBody RBRA)?
  private static boolean featureDefinition_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "featureDefinition_2")) return false;
    featureDefinition_2_0(b, l + 1);
    return true;
  }

  // LBRA featureBody RBRA
  private static boolean featureDefinition_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "featureDefinition_2_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, LBRA);
    p = r; // pin = LBRA
    r = r && report_error_(b, featureBody(b, l + 1));
    r = p && consumeToken(b, RBRA) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // LSQB featureRef? (COMMA featureRef)* RSQB
  public static boolean featureList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "featureList")) return false;
    if (!nextTokenIs(b, LSQB)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FEATURE_LIST, null);
    r = consumeToken(b, LSQB);
    p = r; // pin = 1
    r = r && report_error_(b, featureList_1(b, l + 1));
    r = p && report_error_(b, featureList_2(b, l + 1)) && r;
    r = p && consumeToken(b, RSQB) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // featureRef?
  private static boolean featureList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "featureList_1")) return false;
    featureRef(b, l + 1);
    return true;
  }

  // (COMMA featureRef)*
  private static boolean featureList_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "featureList_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!featureList_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "featureList_2", c)) break;
    }
    return true;
  }

  // COMMA featureRef
  private static boolean featureList_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "featureList_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && featureRef(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // identifier
  public static boolean featureRef(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "featureRef")) return false;
    if (!nextTokenIs(b, "<feature ref>", BTCK_IDENTIFIER, IDENT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FEATURE_REF, "<feature ref>");
    r = identifier(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LSQB EQ num RSQB | EQ (posNegNumber | quotedString)
  public static boolean featureRestriction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "featureRestriction")) return false;
    if (!nextTokenIs(b, "<feature restriction>", EQ, LSQB)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FEATURE_RESTRICTION, "<feature restriction>");
    r = featureRestriction_0(b, l + 1);
    if (!r) r = featureRestriction_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // LSQB EQ num RSQB
  private static boolean featureRestriction_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "featureRestriction_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeTokens(b, 1, LSQB, EQ);
    p = r; // pin = 1
    r = r && report_error_(b, num(b, l + 1));
    r = p && consumeToken(b, RSQB) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // EQ (posNegNumber | quotedString)
  private static boolean featureRestriction_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "featureRestriction_1")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, EQ);
    p = r; // pin = 1
    r = r && featureRestriction_1_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // posNegNumber | quotedString
  private static boolean featureRestriction_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "featureRestriction_1_1")) return false;
    boolean r;
    r = posNegNumber(b, l + 1);
    if (!r) r = quotedString(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // FORBIDDEN FEAT featureRef featureRestriction?
  public static boolean forbiddenFeatureRule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "forbiddenFeatureRule")) return false;
    if (!nextTokenIs(b, FORBIDDEN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FORBIDDEN_FEATURE_RULE, null);
    r = consumeTokens(b, 1, FORBIDDEN, FEAT);
    p = r; // pin = 1
    r = r && report_error_(b, featureRef(b, l + 1));
    r = p && forbiddenFeatureRule_3(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // featureRestriction?
  private static boolean forbiddenFeatureRule_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "forbiddenFeatureRule_3")) return false;
    featureRestriction(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // forbiddenFeatureRule | mandatoryFeatureRule
  static boolean forbiddenOrMandatoryFeatureRule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "forbiddenOrMandatoryFeatureRule")) return false;
    if (!nextTokenIs(b, "", FORBIDDEN, MANDATORY)) return false;
    boolean r;
    r = forbiddenFeatureRule(b, l + 1);
    if (!r) r = mandatoryFeatureRule(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // (OPTIONAL | MANDATORY) vis? GROUP featureDef CONTAINS featureList (LBRA ruleBody RBRA)?
  public static boolean groupDefinition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "groupDefinition")) return false;
    if (!nextTokenIs(b, "<group definition>", MANDATORY, OPTIONAL)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, GROUP_DEFINITION, "<group definition>");
    r = groupDefinition_0(b, l + 1);
    p = r; // pin = 1
    r = r && report_error_(b, groupDefinition_1(b, l + 1));
    r = p && report_error_(b, consumeToken(b, GROUP)) && r;
    r = p && report_error_(b, featureDef(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, CONTAINS)) && r;
    r = p && report_error_(b, featureList(b, l + 1)) && r;
    r = p && groupDefinition_6(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // OPTIONAL | MANDATORY
  private static boolean groupDefinition_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "groupDefinition_0")) return false;
    boolean r;
    r = consumeToken(b, OPTIONAL);
    if (!r) r = consumeToken(b, MANDATORY);
    return r;
  }

  // vis?
  private static boolean groupDefinition_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "groupDefinition_1")) return false;
    vis(b, l + 1);
    return true;
  }

  // (LBRA ruleBody RBRA)?
  private static boolean groupDefinition_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "groupDefinition_6")) return false;
    groupDefinition_6_0(b, l + 1);
    return true;
  }

  // LBRA ruleBody RBRA
  private static boolean groupDefinition_6_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "groupDefinition_6_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, LBRA);
    p = r; // pin = 1
    r = r && report_error_(b, ruleBody(b, l + 1));
    r = p && consumeToken(b, RBRA) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }
